--- a/index.html
+++ b/index.html
@@ -7,6 +7,50 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <title>topo</title>
+    <h3>jamaler ma pitha ghor</h3>
+    <form>
+        <label for="name">Enter name
+        <input id="name" type="text" placeholder="Your name">
+        </label>
+        <label for="email">Enter Email
+        <input id="email" type="email" placeholder="Your Email">
+        </label>
+        <label for="phone">Enter phone number
+        <input id="phone" type="number" placeholder="Your phone number">
+        </label>
+        <fieldset>
+            <legend>Choose pitha item</legend>
+            <label for="chitoi">
+                <input type="radio" name="pitha" id="chitoi">
+                chitoi
+            </label>
+            <label for="poli">
+                <input type="radio" name="pitha" id="poli">
+                poli
+            </label>
+            <label for="vapa">
+                <input type="radio" name="pitha" id="vapa">
+                vapa
+            </label>
+        </fieldset>
+        <fieldset>
+            <legend>Choose vorta item</legend>
+            <label for="shotki">
+                <input type="checkbox" name="vorta" id="shotki">
+                shotki
+            </label>
+            <label for="sorisha">
+                <input type="checkbox" name="vorta" id="sorisha">
+                sorisha
+            </label>
+            <label for="kacha-morich">
+                <input type="checkbox" name="vorta" id="kacha-morich">
+                kacha-morich
+            </label>
+        </fieldset>
+        <input type="reset">
+        <input type="submit" >
+        
+    </form>
 </body>
 </html>
