--- a/index.html
+++ b/index.html
@@ -7,50 +7,42 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h3>jamaler ma pitha ghor</h3>
-    <form>
-        <label for="name">Enter name
-        <input id="name" type="text" placeholder="Your name">
-        </label>
-        <label for="email">Enter Email
-        <input id="email" type="email" placeholder="Your Email">
-        </label>
-        <label for="phone">Enter phone number
-        <input id="phone" type="number" placeholder="Your phone number">
-        </label>
-        <fieldset>
-            <legend>Choose pitha item</legend>
-            <label for="chitoi">
-                <input type="radio" name="pitha" id="chitoi">
-                chitoi
-            </label>
-            <label for="poli">
-                <input type="radio" name="pitha" id="poli">
-                poli
-            </label>
-            <label for="vapa">
-                <input type="radio" name="pitha" id="vapa">
-                vapa
-            </label>
-        </fieldset>
-        <fieldset>
-            <legend>Choose vorta item</legend>
-            <label for="shotki">
-                <input type="checkbox" name="vorta" id="shotki">
-                shotki
-            </label>
-            <label for="sorisha">
-                <input type="checkbox" name="vorta" id="sorisha">
-                sorisha
-            </label>
-            <label for="kacha-morich">
-                <input type="checkbox" name="vorta" id="kacha-morich">
-                kacha-morich
-            </label>
-        </fieldset>
-        <input type="reset">
-        <input type="submit" >
-        
-    </form>
+    <h3>Make a easy table </h3>
+    <table>
+        <thead>
+            <tr>
+                <th>No.</th>
+                <th>Full name</th>
+                <th>Company</th>
+                <th>Salary</th>
+            </tr>
+        </thead>
+        <tbody>
+           <tr>
+            <td>1</td>
+            <td>Bill Gates</td>
+            <td>Microsoft</td>
+            <td>$1000</td>
+           </tr>
+           <tr>
+            <td>2</td>
+            <td>Steve Jobs</td>
+            <td>Apple</td>
+            <td>$1200</td>
+           </tr>
+           <tr>
+            <td>3</td>
+            <td>Lary Page</td>
+            <td>Google</td>
+            <td>$1100</td>
+           </tr>
+           <tr>
+            <td>4</td>
+            <td>Mark Zuckeberg</td>
+            <td>Facebook</td>
+            <td>$1300</td>
+           </tr>
+        </tbody>
+    </table>
 </body>
 </html>
