--- a/Table.html
+++ b/Table.html
@@ -3,11 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Table</title>
+    <link rel="stylesheet" href="style/table.css">
+    <link rel="stylesheet" href="style/nav.css">
 </head>
 <body>
     <h3>Make a easy table </h3>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="Table.html">Table</a></li>
+                <li><a href="audio-video.html">Media</a></li>
+                <li><a href="">Home</a></li>
+            </ul>
+        </nav>
+       </header>
     <table>
         <thead>
             <tr>
